# libp2p_topology_analysis

./: .gitignore  README.md  graph_metrics_209_255.csv  pyproject.toml
analysis/: igraph_metrics.py  main.py  resilience.py  util.py
plot_data/: gmetrics_209.csv  gmetrics_210.csv  gmetrics_211.csv  gmetrics_212.csv  gmetrics_213.csv  gmetrics_214.csv  gmetrics_215.csv  gmetrics_216.csv  gmetrics_217.csv  gmetrics_218.csv  gmetrics_219.csv  gmetrics_220.csv  gmetrics_221.csv  gmetrics_222.csv  gmetrics_223.csv  gmetrics_224.csv  gmetrics_225.csv  gmetrics_226.csv  gmetrics_227.csv  gmetrics_228.csv  gmetrics_229.csv  gmetrics_230.csv  gmetrics_231.csv  gmetrics_232.csv  gmetrics_233.csv  gmetrics_234.csv  gmetrics_235.csv  gmetrics_236.csv  gmetrics_237.csv  gmetrics_238.csv  gmetrics_239.csv  gmetrics_240.csv  gmetrics_241.csv  gmetrics_242.csv  gmetrics_243.csv  gmetrics_244.csv  gmetrics_245.csv  gmetrics_246.csv  gmetrics_247.csv  gmetrics_248.csv  (+7 more)
plotting/: .gitignore  README.md  graph_metrics.R  resilience_plot.R  util.R
